feat: add spacer between top and bottom menu entries

--- a/app/addons/fauxton/assets/less/navigation.less
+++ b/app/addons/fauxton/assets/less/navigation.less
@@ -201,6 +201,10 @@
   background-size: 40px;
 }
 
+.faux-navbar__spacer {
+  height: 6px;
+}
+
 .faux-navbar__footer {
   display: flex;
   flex-direction: column;
