fix: wrong back button color (black is too black to fit with rest of design)

--- a/app/addons/documents/assets/less/header-docs-left.less
+++ b/app/addons/documents/assets/less/header-docs-left.less
@@ -58,6 +58,7 @@ button.faux-header__doc-header-dropdown-toggle:focus {
   border: none;
   background-color: transparent;
   border-right: 1px solid #ccc;
+  color: #333;
   width: 40px;
   padding: 11px;
 }
